<resources>

    <string name="app_name">Pong-vC</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_pongv_c">PongvCActivity</string>
    <string name="menu_play">Jugar</string>
    <string name="menu_options">Opciones</string>
    <string name="menu_exit">Salir</string>
    <string name="description_logo">Logo del juego</string>
    <string name="description_firma">Firma de la web del tutorial</string>

</resources>