<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@android:color/black"
    android:weightSum="1">
    <ImageView 
        android:id="@+id/pong_logo"
        android:src="@drawable/pong"
        android:contentDescription="@string/description_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="50dip"/>
    <TextView 
        android:id="@+id/play_button"
        android:text="@string/menu_play" 
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:background="@drawable/button_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="30dip"/>
    <TextView 
        android:id="@+id/options_button"
        android:text="@string/menu_options" 
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:background="@drawable/button_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="30dip"/>
    <TextView 
        android:id="@+id/exit_button"
        android:text="@string/menu_exit" 
        android:textAppearance="?android:attr/textAppearanceLargeInverse"
        android:background="@drawable/button_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>
    <ImageView
        android:id="@+id/imageView1"
        android:src="@drawable/vc"
        android:contentDescription="@string/description_firma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dip"/>
</LinearLayout>
